creating a base pug template

--- a/views/base.pug
+++ b/views/base.pug
@@ -1,17 +1,43 @@
 doctype html
 html 
     head 
-        title Tours | #{tour}
+        meta(charset='UTF-8')
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
         link(rel='stylesheet' href='css/style.css')
         link(rel='shortcut icon' type='image/png' href='img/favicon.png')
-    body 
-        h1= tour
-        h2= user.toUpperCase()
-        //- h1 The Park Camper
-        //- p This is just some text 
+        link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
+        title Natours | Exciting tours for adventurous people
+    
+    body
+        // Header 
+        header.header 
+            nav.nav.nav--tours
+                a.nav__el(href='#') All Tours 
+            .header__logo 
+                img(src='img/logo-white.png' alt='Natours Logo')
+            nav.nav.nav--user 
+                //- a.nav__el(href='#') My Bookings
+                //- a.nav__el(href='#')
+                //-     img(src='img/iser.jpg' alt='User Photo')
+                //-     span Aaditya 
+                button.nav__el.nav__el--cta Login
+                button.nav__el.nav__el--cta Sign Up 
 
-        - const x = 9 
-        h2= x*2
-
+        //Content
+        section.overview
+            h1= tour
+        
+        //Footer
+        footer.footer 
+            .footer__logo 
+                img(src='img/logo-green.png' alt='natours logo')
+            ul.footer__nav 
+                li: a(href='#') About us
+                li: a(href='#') Download Apps
+                li: a(href='#') Become a guide
+                li: a(href='#') Careers
+                li: a(href='#') Contact
+            p.footer__copyright &copy; by Aaditya Ghimire
+       
  
 
