--- a/views/base.pug
+++ b/views/base.pug
@@ -10,34 +10,14 @@ html
     
     body
         // Header 
-        header.header 
-            nav.nav.nav--tours
-                a.nav__el(href='#') All Tours 
-            .header__logo 
-                img(src='img/logo-white.png' alt='Natours Logo')
-            nav.nav.nav--user 
-                //- a.nav__el(href='#') My Bookings
-                //- a.nav__el(href='#')
-                //-     img(src='img/iser.jpg' alt='User Photo')
-                //-     span Aaditya 
-                button.nav__el.nav__el--cta Login
-                button.nav__el.nav__el--cta Sign Up 
+        include _header
 
         //Content
         section.overview
             h1= tour
         
         //Footer
-        footer.footer 
-            .footer__logo 
-                img(src='img/logo-green.png' alt='natours logo')
-            ul.footer__nav 
-                li: a(href='#') About us
-                li: a(href='#') Download Apps
-                li: a(href='#') Become a guide
-                li: a(href='#') Careers
-                li: a(href='#') Contact
-            p.footer__copyright &copy; by Aaditya Ghimire
+        include _footer
        
  
 
